--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,5 @@ permalink: /blog/:year/:month/:day/:title
 markdown: kramdown
 kramdown:
   math_engine: mathjax
+  input: GFM
   syntax_highlighter: rouge
