--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,4 @@ kramdown:
   input: GFM
   syntax_highlighter: rouge
   extensions: fenced_code_blocks
+  google-site-verification: googlefce688b2163cd376.html
